# SegmentationLib

./: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  vbs.sh
include/: Segmentation.h  ZAdaptiveNormals.hh  base_segmentation.h  cluster_normals_to_planes.hpp  lccp_segmentation.hpp  ms_segmentation.h  pcl_segmentation.h  segment.h  segmentation.h  segmentation_reader.h  segmenter_lib.hpp  surface_cluster.h  surface_model.hpp  svm_wrapper.h  utils.h  z_adaptive_normals.h
include/contours/: Contours.h  Gestalts.h
include/objects/: MRSMapWrap.h  ObjectDetector.h  Training.h  svm_wrapper.h
include/thinning/: thinner.h
src/: Segmentation.cpp  base_segmentation.cpp  clahe.cpp  cluster_normals_to_planes.cpp  cv_segmentation_node.cpp  epbase.cpp  lccp_segmentation.cpp  ms_segmentation.cpp  ms_segmenter.cpp  mssegmentation.cpp  opencv3_svm_wrapper.cpp  pcl_segmentation.cpp  segment.cpp  segmentation.cpp  segmentation_lib.cpp  segmentation_reader.cpp  segmenter.cpp  surface_cluster.cpp  test.cpp  utils.cpp  z_adaptive_normals.cpp
src/apps/: test_contours.cpp  test_gestalts.cpp  test_harris.cpp
src/contours/: Contours.cpp  Gestalts.cpp
src/features/: interest_points.cpp  test_features.cpp  tomasi.cpp
src/memory/: SharedMemory.cpp  SharedMemory.hpp
src/mesh/: render_mesh.cpp  tessel.cpp  test_mesh.cpp
src/objects/: MRSMapWrap.cpp  ObjectDetector.cpp  Training.cpp  svm_wrapper.cpp
src/pcl_hack/: hackfilter.h  hackfilter.hpp  uniform_sampling.cpp  uniform_sampling.h  uniform_sampling.hpp
src/thinning/: thinner.cpp
